theme: JS fix for link targets behind heading
The previous CSS-based fix using bounding box tricks ends up creating a
problem where nearby links could be hidden by the bounding box.  This
JS-based solution doesn't suffer from this problem.

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -5,15 +5,6 @@
   box-sizing: border-box;
 }
 
-/* adjust title link target locations so they're not hidden behind the
- * fixed header - dbk
- */
-div.section[id], span[id], dt[id] {
-  display: block;
-  padding-top: 100px;
-  margin-top: -100px;
-}
-
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {
   display: block;
 }
